[package]
name = "ski-vpn"
version = "0.1.0"
authors = ["Grissess <grissess@nexusg.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
ski = { git = "https://gitea.cslabs.clarkson.edu/grissess/ski-rust.git", branch = "master" }
