[package]
name = "ski-vpn"
version = "0.1.0"
authors = ["Grissess <grissess@nexusg.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
tokio-tun = "^0.5"
sqlite = "^0.24"
async-trait = "^0.1"
clap = { version = "^2", features = ["yaml"] }
ski = { git = "https://github.com/Grissess/ski-rust.git", branch = "master" }
